--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,57 @@
-/*  font-family: "Playfair Display", serif;
- /* font-family: "Playfair Display", serif;  */
+:root {
+  --branding-color: #6c63ff;
+  --secondary-color:#f9f7fe;
+  --heading-font-family: "Playfair Display", serif;
+  --default-font-family: font-family: "Poppins", sans-serif;
+}
 
+body{
+  font-family: var(--default-font-family);
+}
 
-h1 {
-  color: white;
- c
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: black;
+  font-family: var(--heading-font-family);
   font-weight: bold;
 }
+h1 {
+  font-size: 96px;
+}
+
 p {
-  font-family: "Playfair Display", serif;
+ 
+  font-weight: normal;
+}
+
+.hero {
+  background-color: var(--secondary-color);
+  text-align: center;
+  padding: 160px 20px;
+}
+
+.hero p {
+  font-size: 36px;
   font-weight: bold;
+  margin: 0;
+  color: #272142;
+}
+.hero h2 {
+  
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 2;
+}
+
+.btn-branding {
+  background-color: var(--branding-color);
+  border-radius: 4px;
+  color: white;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
 }
