--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,11 @@
 :root {
   --branding-color: #6c63ff;
-  --secondary-color:#f9f7fe;
+  --secondary-color: #f8f6fe;
   --heading-font-family: "Playfair Display", serif;
-  --default-font-family: font-family: "Poppins", sans-serif;
+  --default-font-family: "Poppins", sans-serif;
 }
 
-body{
+body {
   font-family: var(--default-font-family);
 }
 
@@ -22,10 +22,14 @@ h6 {
 h1 {
   font-size: 96px;
 }
+h2 {
+  font-size: 64px;
+}
 
 p {
- 
   font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
 }
 
 .hero {
@@ -41,7 +45,6 @@ p {
   color: #272142;
 }
 .hero h2 {
-  
   font-weight: normal;
   font-size: 24px;
   line-height: 2;
@@ -54,4 +57,35 @@ p {
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
+}
+
+.btn-branding-outline {
+  border: 1px solid var(--branding-color);
+  border-radius: 4px;
+  color: var(--branding-color);
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
+}
+
+.project-description {
+  padding: 120px 60px;
+}
+
+@media (max-width: 960px) {
+  h1 {
+    font-size: 44px;
+    line-height: 1.5;
+  }
+  h2 {
+    font-size: 44px;
+  }
+
+  .project-description {
+    padding: 0;
+    text-align: center;
+  }
+  .hero {
+    padding: 80px 20px;
+  }
 }
