--- a/styles/style.css
+++ b/styles/style.css
@@ -31,6 +31,32 @@ p {
   font-size: 16px;
   line-height: 30px;
 }
+.logo {
+  max-height: 40px;
+}
+
+nav ul {
+  padding: 0;
+  margin: 0;
+}
+nav {
+  padding: 20px 0;
+}
+nav li {
+  display: inline;
+  list-style: none;
+  line-height: 42px;
+  margin-left: 10px;
+}
+nav a {
+  text-decoration: none;
+  color: #272142;
+  transition: all 100ms ease-in-out;
+}
+nav a:hover,
+nav li.active a {
+  color: var(--branding-color);
+}
 
 .hero {
   background-color: var(--secondary-color);
@@ -113,6 +139,9 @@ p {
   .project-description {
     padding: 0;
     text-align: center;
+  }
+  nav a {
+    font-size: 12px;
   }
   .hero {
     padding: 80px 20px;
